[tool.poetry]
name = "market-dash"
version = "0.1.0"
description = ""
authors = ["Jonathan Rayner <jonathan.j.rayner@gmail.com>"]
readme = "README.md"
packages = [{include = "market_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
requests = "^2.28.2"
pandas = "^1.5.3"
plotly = "^5.13.1"
alpaca-py = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
